added basic crud for expense details
